k8s/surrealdb/surrealdb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: surrealdb
  namespace: surrealdb
spec:
  type: ClusterIP
  selector:
    app: surrealdb
  ports:
  - port: 8000
    targetPort: 8000
    name: http
---
apiVersion: v1
kind: Service
metadata:
  name: surrealdb-nodeport
  namespace: surrealdb
spec:
  type: NodePort
  selector:
    app: surrealdb
  ports:
  - port: 8000
    targetPort: 8000
    nodePort: 32000
    name: http
